--- a/CVProfileProject/src/app/components/header/header.component.html
+++ b/CVProfileProject/src/app/components/header/header.component.html
@@ -1,1 +1,29 @@
-<p>header works!</p>
+<!-- Toolbar -->
+<div class="toolbar" role="banner">
+  <img width="100" alt="YoProgramo Logo"
+    href="https://www.argentina.gob.ar/produccion/argentina-programa/segunda-etapa"
+    src="https://www.concordia.gob.ar/sites/all/themes/programar/images/arg-programa.png" />
+  <span>#YoProgramo</span>
+  <div class="spacer">
+  <a href="https://wa.me/5491138537402" title="Whatssap">
+   <img
+        src="https://thumbs.dreamstime.com/b/whatsapp-icono-social-popular-del-de-los-medios-en-la-mano-androide-tenencia-tel%C3%A9fono-m%C3%B3vil-fondo-blanco-aislado-154683483.jpg"
+        id="whatssap-logo">
+  </a>
+  <a href="https://github.com/RRTT-1205" title="Github">
+    <img
+      src="https://br.atsit.in/es/wp-content/uploads/2022/01/github-habilita-la-autenticacion-de-dos-factores-para-ios-android.png"
+      id="github-logo">
+  </a>
+  <a href="mailto:rafart1205@gmail.com" title="Mail">
+    <img
+      src="https://uvn-brightspot.s3.amazonaws.com/assets/vixes/btg/tech.batanga.com/files/Gmail-Como-utilizar-varias-direcciones-de-correo-desde-tu-mismo-e-mail.jpg"
+      id="mail-logo">
+  </a>
+  <a href="https://www.linkedin.com/in/rafael-rodriguezrt" title="LinkedIn">
+    <img
+      src="https://play-lh.googleusercontent.com/kMofEFLjobZy_bCuaiDogzBcUT-dz3BBbOrIEjJ-hqOabjK8ieuevGe6wlTD15QzOqw"
+      id="linked-logo">
+  </a>
+  </div>
+</div>
