--- a/CVProfileProject/src/app/app.component.html
+++ b/CVProfileProject/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
-
-
+<app-img-fondo-header></app-img-fondo-header>
+<app-photo></app-photo>
 
 <div class="content" role="main">
 
