--- a/CVProfileProject/src/app/components/img-fondo-header/img-fondo-header.component.html
+++ b/CVProfileProject/src/app/components/img-fondo-header/img-fondo-header.component.html
@@ -1,2 +1,3 @@
+<div class="row">
 <img src="https://es.rankiapro.com/wp-content/uploads/2019/08/fondo-tecnologico-preferido-selectores.jpg" id="imgFondo">
-
+</div>
