--- a/CVProfileProject/src/app/app.component.html
+++ b/CVProfileProject/src/app/app.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
 <app-img-fondo-header></app-img-fondo-header>
 <app-photo></app-photo>
+<app-profile0></app-profile0>
 
 <div class="content" role="main">
 
