--- a/CVProfileProject/src/app/app.component.html
+++ b/CVProfileProject/src/app/app.component.html
@@ -1,13 +1,41 @@
+<!DOCTYPE html>
+<html lang=”en”>
+
+<head>
+  <meta charset=”UTF-8″ />
+  <meta name="viewport" content="width=device-width,
+  user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+
+<!-- Google Font -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet" />
+
+<!-- Stylesheet -->
+<link rel="stylesheet" href="C:\bacon\WD3.5 Bacon Fansite Start Here\styles.css">
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+</head>
+
+
+<div class="row">
 <app-header></app-header>
 <app-img-fondo-header></app-img-fondo-header>
 <app-photo></app-photo>
 <app-profile0></app-profile0>
+<app-profile1></app-profile1>
+<app-experiencia></app-experiencia>
+</div>
+
 
 <div class="content" role="main">
 
   <!-- Highlight Card -->
   <div class="card highlight-card card-small">
 
+<!--imagen del cohete-->
     <svg id="rocket" xmlns="http://www.w3.org/2000/svg" width="101.678" height="101.678" viewBox="0 0 101.678 101.678">
       <title>Rocket Ship</title>
       <g id="Group_83" data-name="Group 83" transform="translate(-141 -696)">
@@ -15,9 +43,8 @@
           fill="#dd0031" />
         <g id="Group_47" data-name="Group 47" transform="translate(165.185 720.185)">
           <path id="Path_33" data-name="Path 33"
-            d="M3.4,42.615a3.084,3.084,0,0,0,3.553,3.553,21.419,21.419,0,0,0,12.215-6.107L9.511,30.4A21.419,21.419,0,0,0,3.4,42.615Z"
-            transform="translate(0.371 3.363)" fill="#fff" />
-          <path id="Path_34" data-name="Path 34"
+            d="" fill="#fff" />
+            <path id="Path_34" data-name="Path 34"
             d="M53.3,3.221A3.09,3.09,0,0,0,50.081,0,48.227,48.227,0,0,0,18.322,13.437c-6-1.666-14.991-1.221-18.322,7.218A33.892,33.892,0,0,1,9.439,25.1l-.333.666a3.013,3.013,0,0,0,.555,3.553L23.985,43.641a2.9,2.9,0,0,0,3.553.555l.666-.333A33.892,33.892,0,0,1,32.647,53.3c8.55-3.664,8.884-12.326,7.218-18.322A48.227,48.227,0,0,0,53.3,3.221ZM34.424,9.772a6.439,6.439,0,1,1,9.106,9.106,6.368,6.368,0,0,1-9.106,0A6.467,6.467,0,0,1,34.424,9.772Z"
             transform="translate(0 0.005)" fill="#fff" />
         </g>
