--- a/CVProfileProject/src/app/components/img-fondo-header/img-fondo-header.component.css
+++ b/CVProfileProject/src/app/components/img-fondo-header/img-fondo-header.component.css
@@ -1,6 +1,7 @@
 #imgFondo {
-  width: 1350px;
+  width: 1390px;
   height: 250px;
   display: flex;
   margin-left: -8px;
+  margin-right: -8px;
   }
