--- a/CVProfileProject/src/app/app.component.html
+++ b/CVProfileProject/src/app/app.component.html
@@ -27,8 +27,10 @@
 <app-profile0></app-profile0>
 <app-profile1></app-profile1>
 <app-experiencia></app-experiencia>
+<app-educ-certf></app-educ-certf>
+<app-skills></app-skills>
+<app-proyectos></app-proyectos>
 </div>
-
 
 <div class="content" role="main">
 
