--- a/CVProfileProject/src/app/components/educ-certf/educ-certf.component.css
+++ b/CVProfileProject/src/app/components/educ-certf/educ-certf.component.css
@@ -4,8 +4,18 @@
     width: 30px;
     height: 30px;
     justify-content: center;
+    border: 1px solid;
 
   }
+    .fourth {
+      border-color: blue;
+      background-image: -webkit-linear-gradient(45deg, #400ff1 50%, transparent 50%);
+      background-image: linear-gradient(45deg, #400ff1 50%, transparent 50%);
+      background-position: 100%;
+      background-size: 400%;
+      -webkit-transition: background 300ms ease-in-out;
+      transition: background 300ms ease-in-out;
+    }
 
   .d {
     display: inline-block;
