--- a/CVProfileProject/src/app/components/experiencia/experiencia.component.css
+++ b/CVProfileProject/src/app/components/experiencia/experiencia.component.css
@@ -23,6 +23,7 @@
   #editarexp1 {
     width: 30px;
     height: 30px;
+    border: 1px solid;
     }
 
   .d {
@@ -35,6 +36,7 @@
   .form-control {
     display: inline-block;
     background-color: #dcddfa;
+    border: 1px solid ;
   }
 }
 
