--- a/CVProfileProject/src/app/components/proyectos/proyectos.component.css
+++ b/CVProfileProject/src/app/components/proyectos/proyectos.component.css
@@ -2,7 +2,8 @@
   width: 30px;
   height: 30px;
   float: right;
-  }
+  border: 1px solid;
+    }
 
 .form-control {
   background-color: #dcddfa;
@@ -11,4 +12,8 @@
 img {
   max-width: 100%;
   max-height: 100%;
+}
+
+.fourth:hover {
+  background-position: 0;
 }
