--- a/CVProfileProject/src/app/components/header/header.component.html
+++ b/CVProfileProject/src/app/components/header/header.component.html
@@ -26,5 +26,8 @@
       src="https://play-lh.googleusercontent.com/kMofEFLjobZy_bCuaiDogzBcUT-dz3BBbOrIEjJ-hqOabjK8ieuevGe6wlTD15QzOqw"
       id="linked-logo">
   </a>
+  <div class="wrap">
+    <button class="button" (click)="login()">Login</button>
+  </div>
   </div>
 </div>
