--- a/CVProfileProject/src/app/components/header/header.component.css
+++ b/CVProfileProject/src/app/components/header/header.component.css
@@ -57,3 +57,91 @@
 .spacer {
   flex: 1;
 }
+
+
+
+.wrap {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button {
+  margin-top: 8px;
+  min-width: 200px;
+  min-height: 35px;
+  font-size: 15px;
+  letter-spacing: 1px;
+  font-weight: 700;
+  color: whitesmoke;
+  background: #1976d2;
+  background: linear-gradient(90deg, rgb(60, 100, 185) 0%, rgb(132, 111, 193) 100%);
+  border: none;
+  border-radius: 1000px;
+  box-shadow: 12px 12px 24px rgba(79, 120, 209, 0.64);
+  transition: all 0.3s ease-in-out 0s;
+  cursor: pointer;
+  outline: none;
+  position: relative;
+  padding: 5px;
+}
+
+button::before {
+  margin-top: 2px;
+  content: '';
+  border-radius: 1000px;
+  min-width: calc(200px + 12px);
+  min-height: calc(35px + 12px);
+  border: 6px solid whitesmoke;
+  box-shadow: 0 0 60px rgba(0, 38, 255, 0.64);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: all .3s ease-in-out 0s;
+}
+
+.button:hover,
+.button:focus {
+  color: #313133;
+  transform: translateY(-6px);
+}
+
+button:hover::before,
+button:focus::before {
+  opacity: 1;
+}
+
+button::after {
+  content: '';
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  border: 6px solid #1976d2;
+  position: absolute;
+  z-index: -1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: ring 1.5s infinite;
+}
+
+button:hover::after,
+button:focus::after {
+  animation: none;
+  display: none;
+}
+
+@keyframes ring {
+  0% {
+    width: 30px;
+    height: 30px;
+    opacity: 1;
+  }
+
+  100% {
+    width: 300px;
+    height: 300px;
+    opacity: 0;
+  }}
