--- a/CVProfileProject/src/app/components/profile1/profile1.component.html
+++ b/CVProfileProject/src/app/components/profile1/profile1.component.html
@@ -1,5 +1,4 @@
-<div>
-  <div class="card-body">
+<div class="card-body">
     <div class="card-title">
       <!--Eliminar-->
       <button *ngIf="selectedAcercade.id !==0" class="btn btn.danger" (click)="delete()" type="button"
@@ -12,12 +11,15 @@
           src="https://img2.freepng.es/20180319/uje/kisspng-computer-icons-scalable-vector-graphics-apple-icon-edit-png-icon-blue-pencil-5ab065d3a79673.8929716715215098436865.jpg"
           style="float:right" id="editarexp1"></button>
       <h2>Acerca de</h2>
-
-<!--Detalle-->
+      </div>
+      </div>
+<div>
 <p class="row" id="text1">
   <b *ngFor="let employee of acercadeArray" class="list-group-item list-group-item-action"
     (click)="openForEdit(employee)" [class.active]="employee == selectedAcercade">
-    <span class="badge badge-"></span>{{ employee.detalle }}
+    {{ employee.detalle }}</b></p>
+
+
     <div class="form-group">
-      <input type="text" [(ngModel)]="selectedAcercade.detalle" class="form-control" placeholder="Inserte el Detalle">
+        <input type="text" [(ngModel)]="selectedAcercade.detalle" class="form-control" placeholder="Inserte el Detalle">
     </div>
