--- a/CVProfileProject/src/app/components/header/header.component.html
+++ b/CVProfileProject/src/app/components/header/header.component.html
@@ -5,29 +5,29 @@
     src="https://www.concordia.gob.ar/sites/all/themes/programar/images/arg-programa.png" />
     <span>#YoProgramo</span>
 
-<div class="spacer">
+<span class="spacer">
   <a href="https://wa.me/5491138537402" title="Whatssap">
    <img
-        src="https://thumbs.dreamstime.com/b/whatsapp-icono-social-popular-del-de-los-medios-en-la-mano-androide-tenencia-tel%C3%A9fono-m%C3%B3vil-fondo-blanco-aislado-154683483.jpg"
+        src="https://wwwhatsnew.com/wp-content/uploads/2019/10/Truco-para-saber-qui%C3%A9n-tiene-guardado-tu-n%C3%BAmero-de-WhatsApp.jpg"
         id="whatssap-logo">
   </a>
   <a href="https://github.com/RRTT-1205" title="Github">
     <img
-      src="https://br.atsit.in/es/wp-content/uploads/2022/01/github-habilita-la-autenticacion-de-dos-factores-para-ios-android.png"
+      src="https://www.muylinux.com/wp-content/uploads/2017/06/github.png"
       id="github-logo">
   </a>
   <a href="mailto:rafart1205@gmail.com" title="Mail">
     <img
-      src="https://uvn-brightspot.s3.amazonaws.com/assets/vixes/btg/tech.batanga.com/files/Gmail-Como-utilizar-varias-direcciones-de-correo-desde-tu-mismo-e-mail.jpg"
+      src="https://cdn2.downdetector.com/static/uploads/logo/image21.png"
       id="mail-logo">
   </a>
   <a href="https://www.linkedin.com/in/rafael-rodriguezrt" title="LinkedIn">
     <img
-      src="https://play-lh.googleusercontent.com/kMofEFLjobZy_bCuaiDogzBcUT-dz3BBbOrIEjJ-hqOabjK8ieuevGe6wlTD15QzOqw"
+      src="https://cdn.pixabay.com/photo/2018/05/02/12/02/linkedin-3368467__340.jpg"
       id="linked-logo">
   </a>
-  <div class="wrap">
+  <span class="wrap">
     <button class="button" (click)="login()">Login</button>
-  </div>
-  </div>
-</div>
+  </span>
+
+
