--- a/CVProfileProject/src/app/components/proyectos/proyectos.component.css
+++ b/CVProfileProject/src/app/components/proyectos/proyectos.component.css
@@ -12,8 +12,17 @@
 img {
   max-width: 100%;
   max-height: 100%;
-}
+  top: 50%;
+  left: 50%;
+  }
 
 .fourth:hover {
   background-position: 0;
+}
+
+li {
+  background-color: #cdcffe;
+}
+div {
+  background-color: #cdcffe;
 }
