--- a/CVProfileProject/src/app/components/login/login.component.html
+++ b/CVProfileProject/src/app/components/login/login.component.html
@@ -27,8 +27,9 @@
               <!-- JS because of IE support; better: placeholder="Password" -->
 
               <div>
-                <span style="width:48%; text-align:left;  display: inline-block;"><a class="small-text" href="#">Olvido su password?</a></span>
-                <span style="width:50%; text-align:right;  display: inline-block;"><input type="submit"
+                <!--<span style="width:48%; text-align:left;  display: inline-block;"><a class="small-text" href="#">Olvido su password?</a>
+                </span>-->
+                <span style="width:65%; text-align:right;  display: inline-block;" ><input type="submit"
                     value="Sign In"></span>
               </div>
 
