--- a/CVProfileProject/src/app/components/login/login.component.html
+++ b/CVProfileProject/src/app/components/login/login.component.html
@@ -12,44 +12,48 @@
 <div class="main">
 
 
-  <div class="container">
+<div class="container">
 
-      <div class="middle">
-        <div id="login">
+  <div class="middle">
+    <div id="login">
 
-          <form action="javascript:void(0);" method="get">
+    <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
+    <fieldset class="clearfix">
 
-            <fieldset class="clearfix">
+      <p><span class="fa fa-user"></span><input type="text" id="nombreUsuario" name="nombreUsuario" Placeholder="Usuario" [(ngModel)]="nombreUsuario" required></p>
+      <!-- JS because of IE support; better: placeholder="Username" -->
+      <p><span class="fa fa-lock"></span><input type="password" id="password" name="password" Placeholder="Password" [(ngModel)]="password" required></p>
+      <!-- JS because of IE support; better: placeholder="Password" -->
 
-              <p><span class="fa fa-user"></span><input type="text" Placeholder="Nombre" required></p>
-              <!-- JS because of IE support; better: placeholder="Username" -->
-              <p><span class="fa fa-lock"></span><input type="password" Placeholder="Password" required></p>
-              <!-- JS because of IE support; better: placeholder="Password" -->
+   <div>
+     <!--<span style="width:48%; text-align:left;  display: inline-block;"><a class="small-text" href="#">Olvido su password?</a>
+     </span>-->
+    <span style="width:63%; text-align:right;  display: inline-block; margin-bottom: 5px;;"><input type="submit"
+      value="Login"></span>
+     <span style="width:65%; text-align:right;  display: inline-block;" ><input type="submit"
+     value="Sign In"></span>
+    <span style="width:100%; text-align:center;  display: inline-block;"><a class="small-text" href="#">Cree su cuenta!!!</a>
+         </span>
+   </div>
+   </fieldset>
+   <div class="clearfix"></div>
+   </form>
 
-              <div>
-                <!--<span style="width:48%; text-align:left;  display: inline-block;"><a class="small-text" href="#">Olvido su password?</a>
-                </span>-->
-                <span style="width:65%; text-align:right;  display: inline-block;" ><input type="submit"
-                    value="Sign In"></span>
-              </div>
 
-            </fieldset>
-            <div class="clearfix"></div>
-          </form>
+   <div class="clearfix"></div>
 
-          <div class="clearfix"></div>
+   </div> <!-- end login -->
 
-        </div> <!-- end login -->
-        <div class="logo">
-          <img
-            src="https://thumbs.dreamstime.com/z/logotipo-de-carta-rt-en-forma-hex%C3%A1gono-y-dise%C3%B1o-combinado-letras-fondo-colorido-para-identidad-empresarial-empresa-203777226.jpg"
-            id="rt-logo">
+   <div class="logo">
+   <img
+      src="https://thumbs.dreamstime.com/z/logotipo-de-carta-rt-en-forma-hex%C3%A1gono-y-dise%C3%B1o-combinado-letras-fondo-colorido-para-identidad-empresarial-empresa-203777226.jpg"
+      id="rt-logo">
 
-          <div class="clearfix"></div>
-        </div>
-
-      </div>
+   <div class="clearfix"></div>
+   </div>
 
   </div>
+
+</div>
 
 </div>
