--- a/CVProfileProject/src/app/components/header/header.component.css
+++ b/CVProfileProject/src/app/components/header/header.component.css
@@ -145,3 +145,29 @@ button:focus::after {
     height: 300px;
     opacity: 0;
   }}
+/*--- celular ---*/
+@media (max-width: 575px) {
+  .div {
+    flex-direction: column;
+  }
+
+  .toolbar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .toolbar img {
+    margin: 0.2em;
+  }
+
+    .wrap {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .wrap img {
+      margin: 0.2em;
+    }
+}
