--- a/CVProfileProject/src/app/components/photo/photo.component.css
+++ b/CVProfileProject/src/app/components/photo/photo.component.css
@@ -20,3 +20,17 @@
 
   }
 }
+@media (max-width: 375px) {
+  #foto {
+    position: absolute;
+      width: 140px;
+      border-radius: 100%;
+      box-shadow: 1px 1px 1px rgb(230, 206, 206);
+      top: 100px;
+      float: left;
+      padding: 0.5px;
+      padding-left: 10px;
+      height: 175px;
+      width: 175px;
+  }
+}
