--- a/CVProfileProject/src/app/components/header/header.component.html
+++ b/CVProfileProject/src/app/components/header/header.component.html
@@ -26,8 +26,11 @@
       src="https://cdn.pixabay.com/photo/2018/05/02/12/02/linkedin-3368467__340.jpg"
       id="linked-logo">
   </a>
+</span>
+  <div>
   <span class="wrap">
     <button class="button" (click)="login()">Login</button>
   </span>
+  </div>
 
 
