--- a/CVProfileProject/src/app/components/profile0/profile0.component.html
+++ b/CVProfileProject/src/app/components/profile0/profile0.component.html
@@ -1,4 +1,5 @@
-<!--Eliminar-->
+
+  <!--Eliminar-->
 <button *ngIf="selectedEmployee.id !==0" class="btn btn.danger" (click)="delete()" type="button"
   class="rounded float-end">
   <img src="https://ayudawp.com/wp-content/uploads/2018/04/borrar-plugins-wordpress.png" style="float:lef"
@@ -17,9 +18,11 @@
   </b>
   <b *ngFor="let employee of employeeArray" class="list-group-item list-group-item-action"
     (click)="openForEdit(employee)" [class.active]="employee == selectedEmployee">{{ employee.profession}}</b>
+</h1>
 
-
-  <div class="form-group">
+<div class="card-body">
+  <div class="form-group; row">
     <input type="text" [(ngModel)]="selectedEmployee.name" class="form-control" placeholder="Inserte nombre">
     <input type="text" [(ngModel)]="selectedEmployee.profession" class="form-control" placeholder="Inserte profesión">
   </div>
+
