--- a/CVProfileProject/src/app/components/proyectos/proyectos.component.css
+++ b/CVProfileProject/src/app/components/proyectos/proyectos.component.css
@@ -9,11 +9,18 @@
   background-color: #dcddfa;
 }
 
-img {
+img{
   max-width: 100%;
   max-height: 100%;
   top: 50%;
   left: 50%;
+  filter: saturate(180%);
+  border-radius: 35%;
+    -webkit-border-radius: 35%;
+    box-shadow: 0px 0px 15px 15px #d01eec;
+    -webkit-box-shadow: 0px 0px 15px 15px #d01eec;
+    transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
   }
 
 .fourth:hover {
