--- a/CVProfileProject/src/app/components/proyectos/proyectos.component.html
+++ b/CVProfileProject/src/app/components/proyectos/proyectos.component.html
@@ -42,8 +42,8 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <img width="300"
+        <div class="col-md-3">
+          <img width="300" id="imgproyect" padding-left="20px"
             src="https://static.vecteezy.com/system/resources/previews/005/137/193/original/craft-lead-concept-icon-writing-cv-abstract-idea-thin-line-illustration-curriculum-vitae-first-step-of-job-application-job-hunting-isolated-outline-color-drawing-editable-stroke-vector.jpg">
         </div>
       </div>
