--- a/CVProfileProject/src/app/components/header/header.component.html
+++ b/CVProfileProject/src/app/components/header/header.component.html
@@ -29,7 +29,8 @@
 </span>
   <div>
   <span class="wrap">
-    <button class="button" (click)="login()">Login</button>
+    <button class="button" (click)="login()" *ngIf="!isLogged">Login</button>
+    <button class="button" (click)="onLogOut()" *ngIf="isLogged">Sign out</button>
   </span>
   </div>
 
