--- a/CVProfileProject/src/app/components/login/login.component.html
+++ b/CVProfileProject/src/app/components/login/login.component.html
@@ -1,4 +1,3 @@
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
@@ -9,41 +8,47 @@
 <!-- Include the above in your HEAD tag -->
 
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+
 <div class="main">
-
-
 <div class="container">
-
   <div class="middle">
     <div id="login">
 
     <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
-    <fieldset class="clearfix">
+
 
       <p><span class="fa fa-user"></span>
-        <input type="text" id="nombreUsuario" name="nombreUsuario" Placeholder="Usuario" [(ngModel)]="nombreUsuario" name="nombreUsuario" required></p>
+        <input type="text" id="nombreUsuario"  Placeholder="Usuario" [(ngModel)]="nombreUsuario" name="nombreUsuario" required></p>
         <!-- JS because of IE support; better: placeholder="Username" -->
       <p><span class="fa fa-lock"></span>
-        <input type="password" id="password" name="password" Placeholder="Password" [(ngModel)]="password" name="password" required></p>
+        <input type="password" id="password"  Placeholder="Password" [(ngModel)]="password" name="password" required></p>
       <!-- JS because of IE support; better: placeholder="Password" -->
 
    <div>
      <!--<span style="width:48%; text-align:left;  display: inline-block;"><a class="small-text" href="#">Olvido su password?</a>
      </span>-->
-    <span style="width:63%; text-align:right;  display: inline-block; margin-bottom: 5px;;"><input type="submit"
+    <span style="width:63%;
+      text-align:right;
+      display: inline-block;
+      margin-bottom: 5px;"><input type="submit"
       value="Login"></span>
-     <span style="width:65%; text-align:right;  display: inline-block;" ><input type="submit"
-     value="Sign In"></span>
+
+     <span style="width:65%;
+      text-align:right;
+      display: inline-block;" ><input type="submit"
+      value="Sign In"></span>
+
     <span style="width:100%; text-align:center;  display: inline-block;"><a class="small-text" href="#">Cree su cuenta!!!</a>
-         </span>
+    </span>
    </div>
-   </fieldset>
-   <div class="clearfix"></div>
-   </form>
-
 
    <div class="clearfix"></div>
 
+
+
+   <div class="clearfix"></div>
+</form>
    </div> <!-- end login -->
 
    <div class="logo">
