--- a/CVProfileProject/src/app/components/profile0/profile0.component.html
+++ b/CVProfileProject/src/app/components/profile0/profile0.component.html
@@ -13,7 +13,7 @@
 <h1 class="title mt-5">
   <b *ngFor="let employee of employeeArray" class="list-group-item list-group-item-action"
     (click)="openForEdit(employee)" [class.active]="employee == selectedEmployee">
-    {{ employee.name}}
+    {{ persona.nombre}}
 
   </b>
   <b *ngFor="let employee of employeeArray" class="list-group-item list-group-item-action"
