--- a/CVProfileProject/src/app/components/proyectos/proyectos.component.css
+++ b/CVProfileProject/src/app/components/proyectos/proyectos.component.css
@@ -9,7 +9,10 @@
   background-color: #dcddfa;
 }
 
+@media(min-width:576px) {
 .imgproyect{
+  width:350px;
+  margin-left:160px;
   max-width: 100%;
   max-height: 100%;
   filter: saturate(180%);
@@ -17,13 +20,11 @@
     -webkit-border-radius: 35%;
     box-shadow: 0px 0px 15px 15px #d01eec;
     -webkit-box-shadow: 0px 0px 15px 15px #d01eec;
-    transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-  }
+    }
 
 .fourth:hover {
   background-position: 0;
-}
+}}
 
 li {
   background-color: #cdcffe;
@@ -33,4 +34,19 @@ div {
 }
 b {
   background-color: #cdcffe;
+}
+@media(max-width:575px) {
+  .imgproyect {
+    width: 220px;
+    margin-left: 60px;
+    filter: saturate(180%);
+    border-radius: 35%;
+    -webkit-border-radius: 35%;
+    box-shadow: 0px 0px 15px 15px #d01eec;
+    -webkit-box-shadow: 0px 0px 15px 15px #d01eec;
+  }
+
+  .fourth:hover {
+    background-position: 0;
+  }
 }
