--- a/CVProfileProject/src/app/components/proyectos/proyectos.component.html
+++ b/CVProfileProject/src/app/components/proyectos/proyectos.component.html
@@ -46,7 +46,7 @@
           </div>
         </div>
         <div class="col-md-3">
-          <img width="300" class="imgproyect"
+          <img class="imgproyect"
             src="https://static.vecteezy.com/system/resources/previews/005/137/193/original/craft-lead-concept-icon-writing-cv-abstract-idea-thin-line-illustration-curriculum-vitae-first-step-of-job-application-job-hunting-isolated-outline-color-drawing-editable-stroke-vector.jpg">
         </div>
       </div>
