--- a/CVProfileProject/src/app/components/skills/skills.component.html
+++ b/CVProfileProject/src/app/components/skills/skills.component.html
@@ -6,7 +6,7 @@
       </div>
     </div>
 
-    <div class="text-center col-sm-4 col-md-4 col-lg-4">
+    <div class="text-center pt-2 col-sm-4 col-md-4 col-lg-4">
       <div class="skill">
         <div class="outer">
           <div class="inner">
@@ -27,7 +27,7 @@
       </div>
     </div>
 
-    <div class="text-center col-sm-4 col-md-4 col-lg-4">
+    <div class="text-center pt-2 col-sm-4 col-md-4 col-lg-4">
       <div class="skill">
         <div class="outer">
           <div class="inner">
@@ -48,7 +48,7 @@
       </div>
     </div>
 
-    <div class="text-center col-sm-4 col-md-4 col-lg-4">
+    <div class="text-center pt-2 mt-4col-sm-4 col-md-4 col-lg-4">
       <div class="skill">
         <div class="outer">
           <div class="inner">
