--- a/CVProfileProject/src/app/components/proyectos/proyectos.component.html
+++ b/CVProfileProject/src/app/components/proyectos/proyectos.component.html
@@ -45,11 +45,31 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
-          <img class="imgproyect"
-            src="https://static.vecteezy.com/system/resources/previews/005/137/193/original/craft-lead-concept-icon-writing-cv-abstract-idea-thin-line-illustration-curriculum-vitae-first-step-of-job-application-job-hunting-isolated-outline-color-drawing-editable-stroke-vector.jpg">
+        <div class="container" class="col-md-3">
+          <div class="cards1">
+            <div class="card2">
+                <img class="imgproyect"
+                  src="https://static.vecteezy.com/system/resources/previews/005/137/193/original/craft-lead-concept-icon-writing-cv-abstract-idea-thin-line-illustration-curriculum-vitae-first-step-of-job-application-job-hunting-isolated-outline-color-drawing-editable-stroke-vector.jpg">
+              </div>
+              <div class="card2">
+                <img class="imgproyect"
+                  src="https://static.vecteezy.com/system/resources/previews/005/137/216/non_2x/show-impact-concept-icon-writing-cv-abstract-idea-thin-line-illustration-job-hunting-relevant-experience-and-skills-qualification-isolated-outline-color-drawing-editable-stroke-vector.jpg">
+              </div>
+              <div class="card2">
+                <img class="imgproyect"
+                  src="https://static.vecteezy.com/system/resources/previews/005/137/214/original/include-softskills-concept-icon-writing-cv-abstract-idea-thin-line-illustration-highlight-communication-skills-in-resume-teamwork-ability-isolated-outline-color-drawing-editable-stroke-vector.jpg">
+              </div>
+
+          </div>
         </div>
       </div>
+
+
+
+
+
+
+
 
 
 
