--- a/CVProfileProject/src/app/components/login/login.component.css
+++ b/CVProfileProject/src/app/components/login/login.component.css
@@ -1,3 +1,4 @@
+/*login general*/
 div.main {
   background: #0264d6;
   /* Old browsers */
@@ -23,17 +24,14 @@ div.main {
   font-family: 'FontAwesome', sans-serif;
 }
 
-/* ---------- GENERAL ---------- */
+/* GENERAL */
 
 * {
   box-sizing: border-box;
   margin: 0px auto;
-
-
   }
 
 body {
-
   color: #606468;
   font: 87.5%/1.5em 'Open Sans', sans-serif;
   margin: 0;
@@ -74,7 +72,7 @@ p {
   transform: translate(-50%, -50%);
 }
 
-/* ---------- LOGIN ---------- */
+/* LOGIN */
 
 #login form {
   width: 250px;
@@ -168,4 +166,66 @@ input[type="password"] {
   margin: 0 8px;
   float: right;
   border-radius: 100%;
+}
+
+
+/*Nav*/
+.toolbar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  background-color: #1976d2;
+  color: white;
+  font-weight: 600;
+}
+
+.toolbar img {
+  margin: 0 16px;
+}
+
+.toolbar #whatssap-logo {
+  height: 40px;
+  width: 35px;
+  margin: 0 8px;
+  float: right;
+  border-radius: 100%;
+}
+
+.toolbar #github-logo {
+  height: 40px;
+  width: 35px;
+  margin: 0 8px;
+  float: right;
+  border-radius: 100%;
+}
+
+.toolbar #mail-logo {
+  height: 40px;
+  width: 35px;
+  margin: 0 8px;
+  float: right;
+  border-radius: 100%;
+}
+
+.toolbar #linked-logo {
+  height: 40px;
+  width: 35px;
+  margin: 0 8px;
+  float: right;
+  border-radius: 100%;
+}
+
+.toolbar #mail-logo:hover,
+.toolbar #linked-logo:hover,
+.toolbar #github-logo:hover,
+.toolbar #whatssap-logo:hover {
+  opacity: 0.8;
+}
+
+.spacer {
+  flex: 1;
 }
