--- a/CVProfileProject/src/app/components/login/login.component.html
+++ b/CVProfileProject/src/app/components/login/login.component.html
@@ -1,16 +1,34 @@
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
-
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-<!-- Include the above in your HEAD tag -->
-
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-
 <div class="main">
+<div class="toolbar" role="banner">
+   <img width="120" alt="YoProgramo Logo"
+    href="https://www.argentina.gob.ar/produccion/argentina-programa/segunda-etapa"
+    src="https://www.concordia.gob.ar/sites/all/themes/programar/images/arg-programa.png" />
+    <span>#YoProgramo</span>
+
+<span class="spacer">
+  <a href="https://wa.me/5491138537402" title="Whatssap">
+   <img
+        src="https://wwwhatsnew.com/wp-content/uploads/2019/10/Truco-para-saber-qui%C3%A9n-tiene-guardado-tu-n%C3%BAmero-de-WhatsApp.jpg"
+        id="whatssap-logo">
+  </a>
+  <a href="https://github.com/RRTT-1205" title="Github">
+    <img
+      src="https://www.muylinux.com/wp-content/uploads/2017/06/github.png"
+      id="github-logo">
+  </a>
+  <a href="mailto:rafart1205@gmail.com" title="Mail">
+    <img
+      src="https://cdn2.downdetector.com/static/uploads/logo/image21.png"
+      id="mail-logo">
+  </a>
+  <a href="https://www.linkedin.com/in/rafael-rodriguezrt" title="LinkedIn">
+    <img
+      src="https://cdn.pixabay.com/photo/2018/05/02/12/02/linkedin-3368467__340.jpg"
+      id="linked-logo">
+  </a>
+</span>
+
+
 <div class="container">
   <div class="middle">
     <div id="login">
@@ -58,11 +76,8 @@
 
    <div class="clearfix"></div>
    </div>
-
   </div>
-
 </div>
-
 </div>
 
 
