--- a/CVProfileProject/src/app/components/experiencia/experiencia.component.html
+++ b/CVProfileProject/src/app/components/experiencia/experiencia.component.html
@@ -4,6 +4,12 @@
       <h2>Experiencia</h2>
     </div>
 
+    <div class="col-lg-2">
+      <button type="button" class="btn btn-primary" routerLink="/nuevaexp" *ngIf="isLogged">
+        Agregar Nueva Experiencia
+      </button>
+    </div>
+
     <div class="row">
       <ul class="list-group">
         <li class="list-group-item">
