--- a/CVProfileProject/src/app/components/profile0/profile0.component.html
+++ b/CVProfileProject/src/app/components/profile0/profile0.component.html
@@ -1,10 +1,10 @@
   <!--Eliminar-->
-<button *ngIf="selectedEmployee.id !==0" class="btn btn.danger" (click)="delete()" type="button"
+<button *ngIf="selectedEmployee.id !==0"  (click)="delete()" type="button"
   class="rounded float-end">
   <img src="https://ayudawp.com/wp-content/uploads/2018/04/borrar-plugins-wordpress.png" style="float:lef"
     id="editarexp1"></button>
 <!--Agregar o Editar-->
-<button (click)="addOrEdit()" type="button" class="rounded float-end" id="bMore">
+<button (click)="addOrEdit()" type="button"  class="rounded float-end" id="bMore">
   <img
     src="https://img2.freepng.es/20180319/uje/kisspng-computer-icons-scalable-vector-graphics-apple-icon-edit-png-icon-blue-pencil-5ab065d3a79673.8929716715215098436865.jpg"
     style="float:right" id="editarexp1"></button>
