--- a/CVProfileProject/src/app/components/experiencia/experiencia.component.html
+++ b/CVProfileProject/src/app/components/experiencia/experiencia.component.html
@@ -4,10 +4,9 @@
       <h2>Experiencia</h2>
     </div>
 
-    <div class="col-lg-2">
+    <div class="notification">
       <button type="button" class="btn btn-primary" routerLink="/nuevaexp" *ngIf="isLogged">
-        Agregar Nueva Experiencia
-      </button>
+       <h6> (+) Experiencia</h6></button>
     </div>
 
     <div class="row">
