--- a/CVProfileProject/src/app/components/experiencia/new-experiencia/new-experiencia.component.html
+++ b/CVProfileProject/src/app/components/experiencia/new-experiencia/new-experiencia.component.html
@@ -1,7 +1,7 @@
 <body>
   <div class="form-container">
     <div class="login-container">
-      <h2>Bienvenido al editor de experiencia </h2>
+      <h2>Agregar experiencia </h2>
 
 
       <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
