--- a/CVProfileProject/src/app/components/experiencia/new-experiencia/new-experiencia.component.html
+++ b/CVProfileProject/src/app/components/experiencia/new-experiencia/new-experiencia.component.html
@@ -6,7 +6,7 @@
 
       <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
         <p>
-          <label for="nombreE">Nombre de la empresa</label>
+          <label for="nombreE">Nombre de la empresa / Rango de Fecha</label>
           <input class="input" type="text"  id="nombreE" name="nombreE" [(ngModel)]="nombreE" required />
         </p>
 
