--- a/CVProfileProject/src/app/components/experiencia/new-experiencia/new-experiencia.component.html
+++ b/CVProfileProject/src/app/components/experiencia/new-experiencia/new-experiencia.component.html
@@ -11,13 +11,13 @@
         </p>
 
         <p>
-          <label for="">Ubicacion de la empresa</label>
-          <input class="input" type="" name="" />
+          <label for="ubicacionE">Ubicacion de la empresa</label>
+          <input class="input" type="text" id="ubicacionE" name="ubicacionE" [(ngModel)]="ubicacionE" required />
         </p>
 
         <p>
-          <label for="">Cargo</label>
-          <input class="input" type="" name="" />
+          <label for="cargoE">Cargo</label>
+          <input class="input" type="text" id="cargoE" name="cargoE" [(ngModel)]="cargoE" required />
         </p>
 
         <p>
