--- a/CVProfileProject/src/app/components/experiencia/experiencia.component.html
+++ b/CVProfileProject/src/app/components/experiencia/experiencia.component.html
@@ -14,31 +14,37 @@
         <li class="list-group-item">
 
           <!-- Experiencia Prueba BD -->
+
           <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcShY9p8KRp2dsrI_RFi24z1RpDrP8me_4KyAEMtaxWMn2uHgJeOMujgJ0rowtFFYNTVNJg&usqp=CAU"
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQogpmfYoGKsBAP_D_OEqsz3ZA8FhNr-T9nEg&usqp=CAU"
             style="float: left" id="logexpcws">
           <span *ngIf="isLogged">
             <!--Eliminar-->
-            <button *ngIf="selectedExperiencia1.id !==0" class="btn btn.danger" (click)="delete()" type="button"
-              class="rounded float-end">
+            <button type="button" *ngIf="isLogged" class="rounded float-end" (click)="delete2()">
               <img src="https://ayudawp.com/wp-content/uploads/2018/04/borrar-plugins-wordpress.png" style="float:lef"
                 id="editarexp1"></button>
             <!--Agregar o Editar-->
-            <button (click)="addOrEdit()" type="button" class="rounded float-end" width="" height="">
+            <button  type="button" *ngIf="isLogged" class="rounded float-end" routerLink="/editexp/Experiencia.id" >
               <img
                 src="https://img2.freepng.es/20180319/uje/kisspng-computer-icons-scalable-vector-graphics-apple-icon-edit-png-icon-blue-pencil-5ab065d3a79673.8929716715215098436865.jpg"
-                style="float:right" id="editarexp1"></button>
+                style="float:right" id="editarexp1"> </button>
             </span>
           <div>
-            <article> <b *ngFor="let Experiencia of expe" class="item-action">
+            <article> <b *ngFor="let Experiencia of expe">
                 {{ Experiencia.nombreE}}-{{ Experiencia.ubicacionE}}</b></article>
-            <article> <b *ngFor="let Experiencia of expe" class="item-action">
+            <article> <b *ngFor="let Experiencia of expe">
                 {{ Experiencia.cargoE}}
                 </b></article>
-            <p *ngFor="let Experiencia of expe" class="item-action">
+            <p *ngFor="let Experiencia of expe" >
               {{ Experiencia.descripcionE}}</p>
           </div>
-
+          <div class="form-group">
+            <input type="text" [(ngModel)]="selectedExperiencia1.empresa" class="d" placeholder="Empresa">
+            <input type="text" [(ngModel)]="selectedExperiencia1.lugar" class="d" placeholder="Lugar de la empresa">
+            <input type="text" [(ngModel)]="selectedExperiencia1.cargo" class="d" placeholder="Cargo">
+            <input type="text" [(ngModel)]="selectedExperiencia1.fecha" class="d" placeholder="Fecha">
+            <input type="text" [(ngModel)]="selectedExperiencia1.funciones" class="form-control" placeholder="Funciones">
+          </div>
 
           <!-- Experiencia Nº1 -->
           <div class="card mt-2"></div>
